# americanunion

./: .gitignore  LICENSE  README.md  app.py  colony.py  fly.toml  medium_stats.json  original_stats.json  pyproject.toml  static_routes.py  stats.json  todo.txt
api/: __init__.py
api/pythonapi/: borda.py  helpers.py  test.py  type_hints.py  update_stats.py
api/pythonapi/voting/: star.py
api/rustapi/: Cargo.toml
api/rustapi/src/: dgdnumbering.rs  propvoting.rs  representatives.rs  star.rs
static/: stats.css  stats.js  styles.css
static/css/: index.css  stats.css  styles.css
static/js/: stats.js
static/js/stats/: actionbuttons.js  globals.js  newrow.js  stats.js
static/pages/: dogs.txt  humans.txt  robots.txt
templates/: createdocument.html  dataindex.html  error.html  index.html  stats.html
