[project]
name = "american-union-website"
version = "0.9.0"
description = "A website made for the fictional American Union, a world-spanning power with one mission: keep the peace. Its history is told through a series of government documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
]
